--- a/src/Components/Admin-Section/Approval/RegularizationApproval.css
+++ b/src/Components/Admin-Section/Approval/RegularizationApproval.css
@@ -1,16 +1,11 @@
-.regularization-page {
-  display: flex;
+.regularization-approval-layout {
   background: #eff5ff;
-  min-height: 100vh;
-  overflow: hidden;
 }
 
-.regularization-main {
-  flex: 1;
+
+.regularization-approval-main {
   padding: 1px 10px !important;
   background: #eff5ff;
-  margin-top: 2px !important;
-  width: 90% !important;
 }
 
 .regularization-container {
@@ -27,8 +22,8 @@
 .header-top h2 {
   font-size: 30px;
   color: #222;
-  margin-bottom: 35px !important ;
-  font-weight:600;
+  margin-bottom: 35px !important;
+  font-weight: 600;
 }
 
 .header-bottom {
@@ -38,7 +33,7 @@
 }
 
 .left-tabs {
-    margin-top:40px;
+  margin-top: 40px;
   display: flex;
   gap: 0px;
 }
@@ -53,7 +48,7 @@
 }
 
 .tab-btn.active {
- background: #19bde8 !important;
+  background: #19bde8 !important;
   color: #ffffffff !important;
   border: 1px solid #b8b4b4ff;
   padding: 8px 12px !important;
@@ -73,7 +68,7 @@
   border-radius: 16px;
   width: 180px;
   font-size: 14px;
-  background:transparent;
+  background: transparent;
 }
 
 .right-btn-filter {
@@ -86,7 +81,7 @@
   align-items: center;
   gap: 5px;
   font-size: 14px;
-  margin-bottom:-10px;
+  margin-bottom: -10px;
   color: #000;
 }
 
@@ -96,8 +91,8 @@
   border-radius: 16px;
   background: #fff;
   font-size: 14px;
-  margin-top:9px;
-  margin-bottom:0px;
+  margin-top: 9px;
+  margin-bottom: 0px;
 }
 
 
@@ -237,8 +232,8 @@
   width: 38px;
   height: 36px;
   border-radius: 12px;
-  background:transparent;
-  border: 1px solid #b8b4b4ff;  
+  background: transparent;
+  border: 1px solid #b8b4b4ff;
   color: #000000ff;
   cursor: pointer;
   display: flex;
@@ -254,7 +249,8 @@
 /* Popup box */
 .filter-popup {
   position: absolute;
-  top: calc(100% + 10px); /* below filter icon */
+  top: calc(100% + 10px);
+  /* below filter icon */
   right: 0;
   width: 360px;
   background: #ffffff;
@@ -333,7 +329,8 @@
   align-items: center;
   gap: 8px;
   padding: 0 14px;
-  width: auto;            /* allow text */
+  width: auto;
+  /* allow text */
 }
 
 /* Add text using CSS */
