--- a/src/Components/Employee-Section/Topbar.css
+++ b/src/Components/Employee-Section/Topbar.css
@@ -3,13 +3,18 @@
   
 } */
 .topbar {
-  /* margin-top: 50px; */   /* modified */
+  position: sticky !important;
+  top: 0 !important;
+  z-index: 1000 !important;
   height: 70px;
   background: #fff;
-  border-radius: 10px;
-  margin-top: -10px;
-  margin-left: 1px;
-  width: 96%;
+  border-radius: 0 0 10px 10px;
+  margin: 0 !important;
+  width: 100% !important;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  padding: 5px 20px !important;
+  display: flex;
+  align-items: center;
 }
 
 .topbar-img {
@@ -18,23 +23,26 @@
   object-fit: contain;
 }
 
-.topbar-searches{          /* new*/
-    /* width: 400px;  */
-     /* width: 100px; */
+.topbar-searches {
+  /* new*/
+  /* width: 400px;  */
+  /* width: 100px; */
   padding: 5px 10px;
-  padding-right:10px;
+  padding-right: 10px;
   font-size: 13px;
-  outline: none;    
-}
-.topbar-searches input{     /* new*/
-    border: none;
-    background-color: #F6F6F6;
-    /* width: 100px; */
-    height: 100%;
-    outline: none;
+  outline: none;
 }
 
-.form-controler{
+.topbar-searches input {
+  /* new*/
+  border: none;
+  background-color: #F6F6F6;
+  /* width: 100px; */
+  height: 100%;
+  outline: none;
+}
+
+.form-controler {
   width: 50% !important;
 }
 
@@ -44,13 +52,13 @@
   object-fit: cover;
 }
 
-.profile{
-    margin-right:50px;
-    gap:10px;
+.profile {
+  margin-right: 50px;
+  gap: 10px;
 }
 
-.profile-data{
-  gap:5px;
+.profile-data {
+  gap: 5px;
 }
 
 
@@ -63,7 +71,7 @@
   overflow-y: auto;
   background: #fff;
   border-radius: 16px;
-  box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
   padding: 20px;
   z-index: 1000;
   animation: fadeIn 0.2s ease-in-out;
@@ -80,7 +88,7 @@
 
 .popup-content {
   padding: 10px 15px;
-  background: #ffffffff ;
+  background: #ffffffff;
 }
 
 .profile-section {
@@ -91,7 +99,7 @@
 
 .profile-photo {
   text-align: center;
-  
+
 }
 
 .profile-photo img {
@@ -114,12 +122,14 @@
   background: #ffffffff;
   padding: 10px 15px;
   border-radius: 10px;
-  text-align:left;
+  text-align: left;
 }
 
 .details-grid p {
-  color: #000;          /* Makes it darker (pure black) */
-  font-weight: 700;     /* Ensures boldness */
+  color: #000;
+  /* Makes it darker (pure black) */
+  font-weight: 700;
+  /* Ensures boldness */
 }
 
 
@@ -145,6 +155,13 @@
 }
 
 @keyframes fadeIn {
-  from { opacity: 0; transform: translateY(-5px); }
-  to { opacity: 1; transform: translateY(0); }
+  from {
+    opacity: 0;
+    transform: translateY(-5px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
